--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sqflite: ^2.0.0+3
+  vibration: ^1.7.6
+  fluttertoast: ^8.2.1
   #a: ^1.0.0
 
 dev_dependencies:
