added saved text field and solved future delay issue

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: ^2.0.0+3
   vibration: ^1.7.6
   fluttertoast: ^8.2.1
+  shared_preferences: ^2.0.18
   #a: ^1.0.0
 
 dev_dependencies:
