--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.0.18
   intl: ^0.18.0
   flutter_launcher_icons: ^0.12.0
+  fading_edge_scrollview: ^3.0.0
   #a: ^1.0.0
 
 dev_dependencies:
